compiler/test-data/parser/backend/errors/command_with_return_type.frel
module backend.errors.command_with_return_type

backend Counter {
    count : i32 = 0

    command increment() : i32
}
